# thruster_interface

./: .gitignore  README.md  package.xml  setup.py
docs/: setup.md
scripts/ops/: ops_setup.bash  ops_update.bash
scripts/rov/: rov_setup.bash  rov_update.bash
scripts/tcu/: tcu_setup.bash  tcu_update.bash
src/core/: CMakeLists.txt  package.xml
src/core/core_lib/: camera_overlay.py  ms5837.py  pca9685.py  quaternion_math.py
src/core/launch/: bottomside.yaml  gazebo.bash  sim_bottomside.py  topside.yaml
src/core/msg/: Cam.msg  Channel.msg  Channels.msg  Thruster_stat.msg  Thruster_stats.msg  Thrusterstat.msg  Thrusterstats.msg
thruster_interface/: thrusters.py
