<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thruster_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="randallj24@student.jhs.net">jhsrobo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>python3-smbus2-pip</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>core</depend>
  <depend>rcl_interfaces</depend>
  <depend>python3-simple-pid-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
